--- a/styles/main.css
+++ b/styles/main.css
@@ -14,16 +14,16 @@ body{
     display: flex;
     flex-direction: column;
     background: rgba(255, 255, 255, 0.3);
-    width: 800px;
-    height: 600px;
+    width: 850px;
+    height: auto;
     padding: 20px;
     border-radius: 15px;
     box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(10px);
     border: solid rgba(255, 255, 255, 0.1);
     align-items: center;
+    text-align: center;
     justify-content: space-between;
-    
 }
 
 h2, label, p{
@@ -40,7 +40,7 @@ input{
     box-sizing: border-box;
     border-radius: 10px;
     border: 1px solid white;
-    margin-top: 150px;
+    margin-top: 50px;
     font-size: 30px;
 }
 
@@ -51,7 +51,7 @@ button{
     border: none;
     border-radius: 10px;
     cursor: pointer;
-    margin-top: 140px;
+    margin-top: 50px;
     width: 200px;
     height: 70px;
     font-size: 30px;
@@ -107,4 +107,16 @@ button:hover{
 #hourly-heading{
     color: black;
     margin-top: 10px;
+}
+
+.hourly-item {
+    display: flex;
+    flex-direction: column;
+    padding: 8px;
+    background-color: #41C9E2;
+    border-radius: 15px;
+    padding-left: 5px;
+    padding-right: 5px;
+    border: solid 3px #005e90;
+    justify-content: center;
 }
